--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <h2>I'm a Web Developer</h2>
     <hr />
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/My movie ranking.png" height="200" alt="Movie Ranking Project">
+    <img src="../4.3 HTML Porfolio Project/My movie ranking.png" height="200" alt="Movie Ranking Project">
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/My birthday invite.png" height="400" alt="Birthday Invite Project">
+    <img src="../4.3 HTML Porfolio Project/My birthday invite.png" height="400" alt="Birthday Invite Project">
     <hr />
     <a href="./public/about.html">About Me</a>
     <a href="./public/contact.html">Contact Me</a>
 
 </body>
 </html>
-<hr />
